:sparkles: connect page

--- a/assets/stylus/core/colors.styl
+++ b/assets/stylus/core/colors.styl
@@ -1,8 +1,10 @@
-black = #222222
 white = #fefefe
-orange = #fba500
-ultraLightGrey = #f6f6f6
-lightGrey = #cccccc
-darkGrey = #7d7d7d
-ctaGreen = #20c158
-errorRed = #ff4343
+
+grey = #8f8f8f
+lightGrey = #c4c4c4
+
+black = #111111
+
+accent = #6785ff
+
+errorRed = #e83f2b
