--- a/assets/stylus/core/fonts.styl
+++ b/assets/stylus/core/fonts.styl
@@ -1,3 +1,3 @@
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,500,700');
 
-mainFont = "IBM Plex Sans", "Comic Sans MS", sans-serif
+mainFont = "IBM Plex Sans", sans-serif
