:wrench: login page cookie error

--- a/assets/stylus/core/default.styl
+++ b/assets/stylus/core/default.styl
@@ -37,3 +37,17 @@ input
 
   &:hover
     opacity 1
+
+// smooth-scrollbar
+// .scroll-content
+//   @media screen and (max-width: mobile)
+//     transform: none !important
+
+.scrollbar-track
+  border-radius 5px
+//   @media screen and (max-width: mobile)
+//     display none !important
+
+.scrollbar-track-x
+  display none !important
+
